# rust-bazel-examples

./: .gitignore  README.md  WORKSPACE  rust-project.json
proto/: BUILD.bazel
rust/greeter/client/: BUILD.bazel
rust/greeter/client/src/: main.rs
rust/greeter/server/: BUILD.bazel
rust/greeter/server/src/: main.rs
rust/mini-redis/app/client/: BUILD.bazel
rust/mini-redis/app/client/src/: main.rs
rust/mini-redis/app/server/: BUILD.bazel
rust/mini-redis/app/server/src/: main.rs
rust/mini-redis/lib/: BUILD.bazel
rust/mini-redis/lib/src/: cmd.rs  db.rs  lib.rs
